fixed top spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -178,7 +178,7 @@ a.button:hover {
 }
 #message_window .powered_by img {
   position: relative;
-  top: -2.86px;
+  top: -3.86px;
 }
 #message_window section {
   flex-grow: 1;
